# cru

./: .gitignore  README.md  cru.cabal  stack.yaml
app/: Main.hs
front/: .gitignore  elm-package.json
front/public/: index.html
front/src/: Main.elm  main.css
front/src/Cru/: Types.elm
public/: index.html
src/: Cru.hs
src/Cru/: IRC.hs  Types.hs  Web.hs  WebSockets.hs
