name:                cru
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shuhei/cru#readme
license:             BSD3
license-file:        LICENSE
author:              Shuhei Kagawa
maintainer:          shuhei.kagawa@gmail.com
copyright:           2017 Shuhei Kagawa
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cru
  other-modules:       Cru.IRC
                     , Cru.Web
                     , Cru.WebSockets
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , network
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-app-static
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

executable cru-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cru
  default-language:    Haskell2010

test-suite cru-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cru
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shuhei/cru
